# cliar

./: .clangd  CMakeLists.txt  LICENSE  README.md  conanfile.txt
cmake/: general.cmake
include/: cliar.hpp
test/: main.cpp
